# example_framework

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  docker.sh  test.sh
.github/workflows/: main.yml
doc/: Doxyfile
docker/: Dockerfile
docker/requirements/: build.txt  dev.txt  python.txt
include/: ax_sort.h  axelera_sort.h
python/: CMakeLists.txt  axelera_sort_python.cpp
src/: ax_sort.cpp  axelera_sort.cpp
tests/: CMakeLists.txt
tests/python_tests/: test_python_axelera_framework.py
tests/unit_tests/: CMakeLists.txt  test_axelera_sort.cpp
unit_tests/: CMakeLists.txt  test_axelera_sort.cpp
